# macos-search

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  RESTART-PROMPT.md  br
assets/: icons.qrc  macos-search.icns
docs/: 000_index.md  010_vision.md  020_ux_contract.md  030_performance_budget.md  040_data_and_environment.md  050_porting_rules.md  060_test_strategy.md  070_build_and_ship.md  080_operations.md  090_open_questions.md  100_dev_workflow.md  110_features_autostart_and_hotkey.md  120_qt_threading.md  130_favorites.md  140_keyboard_shortcuts.md  150_usability_tests.md  160_navigation_history.md  200_pathstore_redesign.md  210_persistent_index.md  220_recency_boost.md  search_files-too.md  todos.md
docs/qt-reference/: 020_testing_strategy.md  021_testing_advanced.md  030_ui_guidelines.md  031_dark_mode.md  032_icons.md  033_stylesheets.md  040_qt_technology.md  041_memory_management.md  042_crash_prevention.md  043_implementation_learnings.md  050_folder_search.md  051_path_selector.md  README.md
image/output/2026-05-18/: macos-search-logo-aperture.prompt.txt  macos-search-logo-folder-lens.prompt.txt  macos-search-logo-stacked-bolt.prompt.txt
scripts/: br.sh  deploy.sh  mem-compare.sh  screenshot.sh  ui-drive.sh
src/: Autostart.cpp  Autostart.h  Bench.cpp  Bench.h  CloudFileState.cpp  CloudFileState.h  ContentSearchSettings.cpp  ContentSearchSettings.h  EditorLauncher.cpp  EditorLauncher.h  ExcludeSettings.cpp  ExcludeSettings.h  ExcludeSettingsDialog.cpp  ExcludeSettingsDialog.h  FileCacheManager.cpp  FileCacheManager.h  FileSearchWorker.cpp  FileSearchWorker.h  FirstRunDialog.cpp  FirstRunDialog.h  FolderBrowserDialog.cpp  FolderBrowserDialog.h  FolderSearchWorker.cpp  FolderSearchWorker.h  FsEventsWatcher.cpp  FsEventsWatcher.h  GlobalHotkey.cpp  GlobalHotkey.h  HealthMonitor.cpp  HealthMonitor.h  IconRegistry.cpp  IconRegistry.h  MainWindow.cpp  MainWindow.h  MaudeConfig.cpp  MaudeConfig.h  PathCacheManager.cpp  PathCacheManager.h  PathStore.cpp  PathStore.h  (+18 more)
src/PathSelector/: FileSystemAdapter.cpp  FileSystemAdapter.h  PathSelector.cpp  PathSelector.h  PathSelectorKeyHandler.cpp  PathSelectorKeyHandler.h  PathSelectorPopup.cpp  PathSelectorPopup.h  PathSelectorState.cpp  PathSelectorState.h  PathSelectorUI.cpp  PathSelectorUI.h
tests/: AutostartTest.cpp  AutostartTest.h  CacheStrategyTest.cpp  CacheStrategyTest.h  ContentSearchE2ETest.cpp  ContentSearchE2ETest.h  ContentSearchSettingsTest.cpp  ContentSearchSettingsTest.h  EditorLauncherTest.cpp  EditorLauncherTest.h  ExcludeSettingsTest.cpp  ExcludeSettingsTest.h  FileCacheManagerTest.cpp  FileCacheManagerTest.h  FileSearchIntegrationTest.cpp  FileSearchIntegrationTest.h  FileSearchUiTest.cpp  FileSearchUiTest.h  FileSearchWorkerTest.cpp  FileSearchWorkerTest.h  FolderBrowserDialogTest.cpp  FolderBrowserDialogTest.h  FsEventsSyncTest.cpp  FsEventsSyncTest.h  GlobalHotkeyTest.cpp  GlobalHotkeyTest.h  PathCacheManagerTest.cpp  PathCacheManagerTest.h  PathSelectorStateTest.cpp  PathSelectorStateTest.h  PathStoreTest.cpp  PathStoreTest.h  PreferencesDialogTest.cpp  PreferencesDialogTest.h  RipgrepRunnerTest.cpp  RipgrepRunnerTest.h  ScanQueueTest.cpp  ScanQueueTest.h  ScanStateIndicatorTest.cpp  ScanStateIndicatorTest.h  (+9 more)
